--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    steps:
+        steps:
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -51,7 +51,7 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-        - name: Install Linux deps (Tauri)
+      - name: Install Linux deps (Tauri)
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
@@ -65,6 +65,18 @@ jobs:
             librsvg2-dev \
             patchelf \
             libssl-dev
+
+      - name: Install frontend deps
+        run: npm ci
+
+      - name: Build (Tauri)
+        run: npm run tauri:build -- --target ${{ matrix.target }}
+
+      - name: Upload Release Assets
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            src-tauri/target/${{ matrix.target }}/release/bundle/**/*
 
 
       - name: Install frontend deps
