--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,24 +15,27 @@ concurrency:
 jobs:
   build:
     name: Build (${{ matrix.label }})
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - os: macos-13
+          - os: macos-15-intel
             label: macos-intel
             target: x86_64-apple-darwin
-          - os: macos-14
+
+          - os: macos-15
             label: macos-arm64
             target: aarch64-apple-darwin
+
           - os: windows-latest
             label: windows
             target: x86_64-pc-windows-msvc
+
           - os: ubuntu-22.04
             label: linux
             target: x86_64-unknown-linux-gnu
 
-    runs-on: ${{ matrix.os }}
     env:
       CI: "true"
 
