--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ tauri-build = { version = "1.5", features = [] }
 tauri = { version = "1.6", features = [ "shell-open", "dialog-open", "dialog-save" ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "native-tls"] }
 open_launcher = { path = "vendor/open_launcher" }
 base64 = "0.22"
 sha2 = "0.10"
