--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,19 +1,19 @@
-name: release
+name: ci-build
 
 on:
   push:
-    tags:
-      - "v*.*.*"
+  pull_request:
+  workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
 
 concurrency:
-  group: release-${{ github.ref }}
-  cancel-in-progress: false
+  group: ci-build-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build:
+  tauri-build:
     name: Build (${{ matrix.label }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -29,11 +29,11 @@ jobs:
             target: aarch64-apple-darwin
 
           - os: windows-latest
-            label: windows
+            label: windows-x64
             target: x86_64-pc-windows-msvc
 
           - os: ubuntu-22.04
-            label: linux
+            label: linux-x64
             target: x86_64-unknown-linux-gnu
 
     env:
@@ -70,8 +70,6 @@ jobs:
             curl \
             wget \
             file
-          pkg-config --modversion libsoup-2.4
-          pkg-config --modversion webkit2gtk-4.0
 
       - name: Disable DMG bundling on macOS (ship zipped .app instead)
         if: runner.os == 'macOS'
@@ -85,10 +83,6 @@ jobs:
             echo "No tauri.conf.json/json5 found; skipping patch."
             exit 0
           fi
-          echo "Patching $CONF to disable DMG (set bundle.targets to [\"app\"])."
-          # Best-effort patch that works for common JSON/JSON5 shapes without requiring json5 tooling:
-          # 1) If targets is an array, replace its contents with "app"
-          # 2) If targets is a string (e.g., "all"), set it to ["app"]
           perl -0777 -i -pe '
             s/"targets"\s*:\s*\[[^\]]*\]/"targets": ["app"]/g;
             s/"targets"\s*:\s*"all"/"targets": ["app"]/g;
@@ -115,70 +109,50 @@ jobs:
           set -euxo pipefail
           npm run tauri:build -- --target ${{ matrix.target }}
 
-      - name: Ad-hoc sign macOS app (avoids "damaged" warning)
+      - name: Ad-hoc sign macOS app
         if: runner.os == 'macOS'
         shell: bash
         run: |
           set -euxo pipefail
           BUNDLE_DIR="src-tauri/target/${{ matrix.target }}/release/bundle/macos"
-
-          echo "Looking for .app in: $BUNDLE_DIR"
-          ls -la "$BUNDLE_DIR" || true
-
           APP="$(ls -d "$BUNDLE_DIR"/*.app 2>/dev/null | head -n 1)"
           if [ -z "${APP:-}" ]; then
-            echo "No .app found at expected path."
-            echo "Searching bundle dir for any .app..."
             find "src-tauri/target/${{ matrix.target }}/release/bundle" -maxdepth 4 -name "*.app" -print || true
             exit 1
           fi
-
-          echo "Signing: $APP"
           codesign --force --deep --sign - "$APP"
           codesign --verify --deep --strict "$APP"
 
-
-      - name: Collect release artifacts
+      - name: Collect build artifacts
         shell: bash
         run: |
           set -euxo pipefail
           mkdir -p dist-artifacts
 
-          TAG="${GITHUB_REF_NAME}"
+          RUN_TAG="run${{ github.run_number }}.${{ github.run_attempt }}"
           LABEL="${{ matrix.label }}"
 
           BUNDLE_DIR_1="src-tauri/target/${{ matrix.target }}/release/bundle"
           BUNDLE_DIR_2="src-tauri/target/release/bundle"
 
-          pick_bundle_dir() {
-            if [ -d "$BUNDLE_DIR_1" ]; then echo "$BUNDLE_DIR_1"; return; fi
-            if [ -d "$BUNDLE_DIR_2" ]; then echo "$BUNDLE_DIR_2"; return; fi
-            echo ""
-          }
-
-          BUNDLE_DIR="$(pick_bundle_dir)"
-          if [ -z "$BUNDLE_DIR" ]; then
+          if [ -d "$BUNDLE_DIR_1" ]; then
+            BUNDLE_DIR="$BUNDLE_DIR_1"
+          elif [ -d "$BUNDLE_DIR_2" ]; then
+            BUNDLE_DIR="$BUNDLE_DIR_2"
+          else
             echo "Could not find Tauri bundle directory."
-            echo "Tried: $BUNDLE_DIR_1 and $BUNDLE_DIR_2"
             exit 1
           fi
-
-          echo "Using bundle dir: $BUNDLE_DIR"
 
           shopt -s nullglob
 
           if [ "${{ runner.os }}" = "macOS" ]; then
             APPS=("$BUNDLE_DIR/macos/"*.app)
-            if [ "${#APPS[@]}" -lt 1 ]; then
-              echo "No .app found in $BUNDLE_DIR/macos"
-              find "$BUNDLE_DIR" -maxdepth 4 -type d -name "*.app" -print || true
-              exit 1
-            fi
+            [ "${#APPS[@]}" -ge 1 ] || (find "$BUNDLE_DIR" -maxdepth 4 -type d -name "*.app" -print && exit 1)
             APP="${APPS[0]}"
             APP_BASENAME="$(basename "$APP" .app)"
-            OUT="dist-artifacts/${APP_BASENAME}_${TAG}_${LABEL}.app.zip"
+            OUT="dist-artifacts/${APP_BASENAME}_${RUN_TAG}_${LABEL}.app.zip"
             ditto -c -k --sequesterRsrc --keepParent "$APP" "$OUT"
-            echo "Created: $OUT"
           elif [ "${{ runner.os }}" = "Windows" ]; then
             for f in \
               "$BUNDLE_DIR"/msi/*.msi \
@@ -190,7 +164,7 @@ jobs:
                 base="$(basename "$f")"
                 ext="${base##*.}"
                 stem="${base%.*}"
-                cp -f "$f" "dist-artifacts/${stem}_${TAG}_${LABEL}.${ext}"
+                cp -f "$f" "dist-artifacts/${stem}_${RUN_TAG}_${LABEL}.${ext}"
               fi
             done
           else
@@ -203,65 +177,17 @@ jobs:
                 base="$(basename "$f")"
                 ext="${base##*.}"
                 stem="${base%.*}"
-                cp -f "$f" "dist-artifacts/${stem}_${TAG}_${LABEL}.${ext}"
+                cp -f "$f" "dist-artifacts/${stem}_${RUN_TAG}_${LABEL}.${ext}"
               fi
             done
           fi
 
-          # Sanity: only keep real distributables
-          find dist-artifacts -type f \
-            ! -name "*.dmg" \
-            ! -name "*.zip" \
-            ! -name "*.AppImage" \
-            ! -name "*.deb" \
-            ! -name "*.rpm" \
-            ! -name "*.msi" \
-            ! -name "*.exe" \
-            -delete || true
-
-          echo "Final artifacts:"
-          ls -la dist-artifacts
           test -n "$(ls -A dist-artifacts)"
 
-      - name: Upload workflow artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: release-${{ matrix.label }}
+          name: build-${{ matrix.label }}
           path: dist-artifacts/*
           if-no-files-found: error
           retention-days: 7
-
-  publish:
-    name: Publish GitHub Release
-    runs-on: ubuntu-latest
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/v')
-
-    steps:
-      - name: Download all build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: release-assets
-
-      - name: List assets
-        shell: bash
-        run: |
-          set -euxo pipefail
-          find release-assets -type f -maxdepth 3 -print
-          test -n "$(find release-assets -type f -maxdepth 3 -print -quit)"
-
-      - name: Create/Update GitHub Release and upload assets
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          generate_release_notes: true
-          fail_on_unmatched_files: true
-          files: |
-            release-assets/**/*.zip
-            release-assets/**/*.AppImage
-            release-assets/**/*.deb
-            release-assets/**/*.rpm
-            release-assets/**/*.msi
-            release-assets/**/*.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
