--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,11 +20,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-13
+          - os: macos-15-intel
             label: macos-intel
             target: x86_64-apple-darwin
 
-          - os: macos-14
+          - os: macos-15
             label: macos-arm64
             target: aarch64-apple-darwin
 
