--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,59 +125,7 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p .tauri-ci
-          node <<'NODE'
-          const fs = require("fs");
-          const path = require("path");
-          const confPath = "src-tauri/tauri.conf.json";
-          function maybeDecodeBase64(input) {
-            const s = String(input || "").trim();
-            if (!s) return "";
-            if (s.includes("untrusted comment:") || s.startsWith("RW")) return s;
-            if (!/^[A-Za-z0-9+/=\r\n]+$/.test(s)) return s;
-            try {
-              const decoded = Buffer.from(s.replace(/\s+/g, ""), "base64").toString("utf8");
-              return decoded || s;
-            } catch {
-              return s;
-            }
-          }
-          function extractPubKey(raw) {
-            let s = maybeDecodeBase64(raw);
-            try {
-              s = decodeURIComponent(s);
-            } catch {}
-            const lines = s.split(/\r?\n/).map((line) => line.trim()).filter(Boolean);
-            const rwLine = lines.find((line) => /^RW[A-Za-z0-9+/=]+$/.test(line));
-            if (rwLine) return rwLine;
-            const inline = s.match(/RW[A-Za-z0-9+/=]+/);
-            return inline ? inline[0] : "";
-          }
-          function extractPrivateKey(raw) {
-            const s = maybeDecodeBase64(raw);
-            if (s.includes("untrusted comment: minisign secret key:")) return s.trim();
-            return String(raw || "").trim();
-          }
-          const pub = extractPubKey(process.env.TAURI_UPDATER_PUBKEY || "");
-          if (!pub || !/^RW[A-Za-z0-9+/=]+$/.test(pub)) {
-            throw new Error("Could not parse TAURI_UPDATER_PUBKEY into a valid RW... key.");
-          }
-          const priv = extractPrivateKey(process.env.TAURI_PRIVATE_KEY || "");
-          if (!priv || !priv.includes("untrusted comment: minisign secret key:")) {
-            throw new Error("Could not parse TAURI_PRIVATE_KEY into a minisign private key.");
-          }
-
-          const privateKeyPath = path.join(".tauri-ci", "updater.private.key");
-          fs.writeFileSync(privateKeyPath, `${priv}\n`, "utf8");
-          fs.chmodSync(privateKeyPath, 0o600);
-          fs.appendFileSync(process.env.GITHUB_ENV, `TAURI_PRIVATE_KEY=${privateKeyPath}\n`, "utf8");
-
-          const config = JSON.parse(fs.readFileSync(confPath, "utf8"));
-          config.tauri = config.tauri || {};
-          config.tauri.updater = config.tauri.updater || {};
-          config.tauri.updater.pubkey = pub;
-          fs.writeFileSync(confPath, `${JSON.stringify(config, null, 2)}\n`, "utf8");
-          console.log("Normalized updater key material and injected updater pubkey.");
-          NODE
+          node -e 'const fs=require("fs"); const path=require("path"); const confPath="src-tauri/tauri.conf.json"; const maybeDecodeBase64=(input)=>{ const s=String(input||"").trim(); if(!s) return ""; if(s.includes("untrusted comment:")||s.startsWith("RW")) return s; if(!/^[A-Za-z0-9+/=\\r\\n]+$/.test(s)) return s; try { const d=Buffer.from(s.replace(/\\s+/g,""),"base64").toString("utf8"); return d||s; } catch { return s; } }; const extractPubKey=(raw)=>{ let s=maybeDecodeBase64(raw); try { s=decodeURIComponent(s); } catch {} const lines=s.split(/\\r?\\n/).map((line)=>line.trim()).filter(Boolean); const rw=lines.find((line)=>/^RW[A-Za-z0-9+/=]+$/.test(line)); if(rw) return rw; const inline=s.match(/RW[A-Za-z0-9+/=]+/); return inline?inline[0]:""; }; const extractPrivateKey=(raw)=>{ const s=maybeDecodeBase64(raw); if(s.includes("untrusted comment: minisign secret key:")) return s.trim(); return String(raw||"").trim(); }; const pub=extractPubKey(process.env.TAURI_UPDATER_PUBKEY||""); if(!pub||!/^RW[A-Za-z0-9+/=]+$/.test(pub)){ throw new Error("Could not parse TAURI_UPDATER_PUBKEY into a valid RW... key."); } const priv=extractPrivateKey(process.env.TAURI_PRIVATE_KEY||""); if(!priv||!priv.includes("untrusted comment: minisign secret key:")){ throw new Error("Could not parse TAURI_PRIVATE_KEY into a minisign private key."); } const privateKeyPath=path.join(".tauri-ci","updater.private.key"); fs.writeFileSync(privateKeyPath, priv+"\\n","utf8"); fs.chmodSync(privateKeyPath,0o600); fs.appendFileSync(process.env.GITHUB_ENV, "TAURI_PRIVATE_KEY="+privateKeyPath+"\\n","utf8"); const config=JSON.parse(fs.readFileSync(confPath,"utf8")); config.tauri=config.tauri||{}; config.tauri.updater=config.tauri.updater||{}; config.tauri.updater.pubkey=pub; fs.writeFileSync(confPath, JSON.stringify(config,null,2)+"\\n","utf8"); console.log("Normalized updater key material and injected updater pubkey.");'
 
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
@@ -356,74 +304,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          node <<'NODE'
-          const fs = require("fs");
-          const path = require("path");
-
-          const root = "release-assets";
-          const repo = process.env.GITHUB_REPOSITORY;
-          const tag = process.env.GITHUB_REF_NAME;
-          if (!repo || !tag) {
-            throw new Error("Missing GITHUB_REPOSITORY or GITHUB_REF_NAME");
-          }
-          const version = tag.startsWith("v") ? tag.slice(1) : tag;
-
-          function walk(dir) {
-            const out = [];
-            for (const item of fs.readdirSync(dir, { withFileTypes: true })) {
-              const full = path.join(dir, item.name);
-              if (item.isDirectory()) out.push(...walk(full));
-              else if (item.isFile()) out.push(full);
-            }
-            return out;
-          }
-
-          const files = walk(root).map((full) => path.relative(root, full).replace(/\\/g, "/"));
-          const updaterArchives = files.filter((f) => f.endsWith(".tar.gz") || f.endsWith(".zip"));
-          const platforms = {};
-
-          function detectPlatform(fileName) {
-            if (fileName.includes("_macos-arm64.tar.gz")) return "darwin-aarch64";
-            if (fileName.includes("_macos-intel.tar.gz")) return "darwin-x86_64";
-            if (fileName.includes("_windows-arm64.tar.gz") || fileName.includes("_windows-arm64.zip")) return "windows-aarch64";
-            if (fileName.includes("_windows-x64.tar.gz") || fileName.includes("_windows.tar.gz")) return "windows-x86_64";
-            if (fileName.includes("_windows-x64.zip") || fileName.includes("_windows.zip")) return "windows-x86_64";
-            if (fileName.includes("_linux-x64.tar.gz") || fileName.includes("_linux.tar.gz")) return "linux-x86_64";
-            return null;
-          }
-
-          for (const archive of updaterArchives) {
-            const platform = detectPlatform(archive);
-            if (!platform) continue;
-            const sigPath = `${archive}.sig`;
-            const fullSig = path.join(root, sigPath);
-            if (!fs.existsSync(fullSig)) continue;
-            const signature = fs.readFileSync(fullSig, "utf8").trim();
-            if (!signature) continue;
-            const fileName = path.basename(archive);
-            const encodedFileName = encodeURIComponent(fileName);
-            platforms[platform] = {
-              signature,
-              url: `https://github.com/${repo}/releases/download/${tag}/${encodedFileName}`,
-            };
-          }
-
-          if (Object.keys(platforms).length === 0) {
-            throw new Error("No signed updater artifacts found for latest.json generation.");
-          }
-
-          const manifest = {
-            version,
-            notes: `OpenJar Launcher ${tag}`,
-            pub_date: new Date().toISOString(),
-            platforms,
-          };
-
-          const outPath = path.join(root, "latest.json");
-          fs.writeFileSync(outPath, `${JSON.stringify(manifest, null, 2)}\n`, "utf8");
-          console.log(`Wrote ${outPath}`);
-          console.log(JSON.stringify(manifest, null, 2));
-          NODE
+          node -e 'const fs=require("fs"); const path=require("path"); const root="release-assets"; const repo=process.env.GITHUB_REPOSITORY; const tag=process.env.GITHUB_REF_NAME; if(!repo||!tag){ throw new Error("Missing GITHUB_REPOSITORY or GITHUB_REF_NAME"); } const version=tag.startsWith("v")?tag.slice(1):tag; const walk=(dir)=>{ const out=[]; for (const item of fs.readdirSync(dir,{withFileTypes:true})) { const full=path.join(dir,item.name); if(item.isDirectory()) out.push(...walk(full)); else if(item.isFile()) out.push(full); } return out; }; const files=walk(root).map((full)=>path.relative(root,full).replace(/\\\\/g,"/")); const updaterArchives=files.filter((f)=>f.endsWith(".tar.gz")||f.endsWith(".zip")); const platforms={}; const detectPlatform=(fileName)=>{ if(fileName.includes("_macos-arm64.tar.gz")) return "darwin-aarch64"; if(fileName.includes("_macos-intel.tar.gz")) return "darwin-x86_64"; if(fileName.includes("_windows-arm64.tar.gz")||fileName.includes("_windows-arm64.zip")) return "windows-aarch64"; if(fileName.includes("_windows-x64.tar.gz")||fileName.includes("_windows.tar.gz")) return "windows-x86_64"; if(fileName.includes("_windows-x64.zip")||fileName.includes("_windows.zip")) return "windows-x86_64"; if(fileName.includes("_linux-x64.tar.gz")||fileName.includes("_linux.tar.gz")) return "linux-x86_64"; return null; }; for (const archive of updaterArchives) { const platform=detectPlatform(archive); if(!platform) continue; const sigPath=archive+".sig"; const fullSig=path.join(root,sigPath); if(!fs.existsSync(fullSig)) continue; const signature=fs.readFileSync(fullSig,"utf8").trim(); if(!signature) continue; const fileName=path.basename(archive); const encodedFileName=encodeURIComponent(fileName); platforms[platform]={ signature, url:"https://github.com/"+repo+"/releases/download/"+tag+"/"+encodedFileName }; } if (Object.keys(platforms).length===0) { throw new Error("No signed updater artifacts found for latest.json generation."); } const manifest={ version, notes:"OpenJar Launcher "+tag, pub_date:new Date().toISOString(), platforms }; const outPath=path.join(root,"latest.json"); fs.writeFileSync(outPath, JSON.stringify(manifest,null,2)+"\\n","utf8"); console.log("Wrote "+outPath); console.log(JSON.stringify(manifest,null,2));'
 
       - name: Create/Update GitHub Release and upload assets
         uses: softprops/action-gh-release@v2
