ci: export normalized updater private key as env content for tauri signing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -128,7 +128,7 @@ jobs:
           mkdir -p .tauri-ci
           node <<'NODE'
           const fs = require("fs");
-          const path = require("path");
+          const crypto = require("crypto");
           const confPath = "src-tauri/tauri.conf.json";
 
           const stripWrapping = (input) => {
@@ -258,10 +258,19 @@ jobs:
             throw new Error("Could not parse TAURI_PRIVATE_KEY into minisign/rsign secret key content.");
           }
 
-          const privateKeyPath = path.join(".tauri-ci", "updater.private.key");
-          fs.writeFileSync(privateKeyPath, `${priv}\n`, "utf8");
-          fs.chmodSync(privateKeyPath, 0o600);
-          fs.appendFileSync(process.env.GITHUB_ENV, `TAURI_PRIVATE_KEY=${privateKeyPath}\n`, "utf8");
+          const envFile = process.env.GITHUB_ENV;
+          if (!envFile) {
+            throw new Error("GITHUB_ENV is not set; cannot export normalized TAURI_PRIVATE_KEY.");
+          }
+          let delimiter = `TAURI_KEY_${crypto.randomUUID().replace(/-/g, "")}`;
+          while (priv.includes(delimiter)) {
+            delimiter = `TAURI_KEY_${crypto.randomUUID().replace(/-/g, "")}`;
+          }
+          fs.appendFileSync(
+            envFile,
+            `TAURI_PRIVATE_KEY<<${delimiter}\n${priv}\n${delimiter}\n`,
+            "utf8"
+          );
 
           const config = JSON.parse(fs.readFileSync(confPath, "utf8"));
           config.tauri = config.tauri || {};
